--- a/package.json
+++ b/package.json
@@ -20,5 +20,13 @@
     "@openzeppelin/contracts": "^4.3.1",
     "truffle": "^5.4.10",
     "truffle-flattener": "^1.5.0"
+  },
+  "devDependencies": {
+    "@nomiclabs/hardhat-ethers": "^2.0.2",
+    "@nomiclabs/hardhat-waffle": "^2.0.1",
+    "chai": "^4.3.4",
+    "ethereum-waffle": "^3.4.0",
+    "ethers": "^5.4.6",
+    "hardhat": "^2.6.4"
   }
 }
