--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@ yarn-error.log*
 lerna-debug.log\*
 artifacts
 .deps
+secrets.json
+cache/
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 
